# nedryglot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  default.nix  docs.nix  flake.nix  languages.nix  protobuf.nix  test.nix
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  deploy-book.yml
c/: Doxyfile  common.nix  default.nix  doxygen-awesome.nix  make-derivation.nix
cpp/: default.nix
docs/: book.toml
docs/src/: SUMMARY.md  intro.md  protobuf.md
docs/src/c/: components.md  override.md
docs/src/python/: components.md  override.md
docs/src/rust/: components.md  override.md
docs/src/terraform/: components.md
examples/hello/: README.md  flake.nix  project.nix
examples/hello/extensions/: python-numpywrapped.nix  rust-windows-target.nix  windows-runner.nix
examples/hello/libraries/: .gitignore
examples/overrides/: README.md  default.nix  flake.nix  project.nix
examples/overrides/extensions/: overrides.nix
examples/protobuf/: flake.nix  project.nix
protobuf/: default.nix
python/: default.nix  docs.nix  package.nix  protobuf.nix
python/component-template/: pyproject.toml
python/hooks/: check.bash  config-merger.py  default.nix
python/hooks/config/: ruff.toml  (+2 more)
python/protobuf/: pyproject.toml
rust/: build-platform-runner.nix  default-crates.nix  default.nix  gen-crates-expr.py  package.nix  protobuf.nix  rust-setuphook.sh  vendor.nix
terraform/: default.nix
terraform/component-template/: main.tf
terraform/deployment/: default.nix  deployer.nix  setup.py  terraform.py
tests/: c.nix  python.nix  rust.nix  terraform.nix
(+37 files in other folders)
