[build-system]
requires = [ "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "@packageName@"
version = "@version@"
description = "Python type definitions for @packageName@"
dependencies = [ "protobuf==@protoVersion@" ]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
